Nupur Joshi: Bug02_About-Us_Page_COMMUNITY PARTNERS content is overlapping with footer.

--- a/JarvisCorp.MainProject/Css/style.css
+++ b/JarvisCorp.MainProject/Css/style.css
@@ -7,3 +7,6 @@
     height: 35px;
     background-color: transparent;
 }
+.contact-form {
+    margin-top: 6%;
+}
